# t-tasker

./: .env.docker  .env.example  .gitignore  BUG_REPORT.md  CHECKLIST.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  plan.md  prd.md  pyproject.toml  run_local.py  run_real_stress_test.py  run_simple.py  run_stress_test.py  setup_webhook.sh  todoist.md
migrations/: 001_add_auto_delete_previous.sql
models/: todoist_parser_v1.json
scripts/: optimize_dspy_parser.py  prepare_dspy_dataset.py  test_dspy_connection.py  test_dspy_detailed.py
src/: main.py
src/core/: bot.py  database.py  exceptions.py  middleware.py  redis_storage.py  server.py  settings.py
src/handlers/: __init__.py  admin.py  callbacks.py  commands.py  edit_handlers.py  errors.py  messages.py  states.py
src/middleware/: auth.py
src/models/: base.py  db.py  intent.py  task.py  user.py
src/repositories/: __init__.py  task.py  user.py
src/services/: command_executor.py  deepgram_service.py  dspy_metrics.py  dspy_parser.py  encryption.py  openai_service.py  todoist_service.py
src/utils/: formatters.py
tests/: conftest.py  test_command_executor.py  test_intent_models.py  test_openai_intent.py  test_stress_simple.py  test_todoist_extensions.py
tests/core/: test_settings.py
tests/handlers/: test_commands.py
tests/models/: test_task.py
tests/services/: test_deepgram_service.py  test_encryption.py  test_openai_service.py  test_todoist_service.py
tests/stress/: README.md  __init__.py  load_generator.py  metrics_collector.py  mock_services.py  telegram_simulator.py  test_quick_verify.py  test_real_stress.py
